----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2004-09-19 Alexander M. Turek  <me@derrabus.de>
    * Documentation.html: Clarification.

2004-09-19 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/latvian: Updated, thanks to Sandis Jerics (saaa2002).

2004-09-18 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/russian updated, thanks to "nobody"
    * lang/albanian: Updated, thanks to Laurent Dhima (laurenti).

2004-09-16 Marc Delisle  <lem9@users.sourceforge.net>
    * config.inc.php, Documentation.html: clarifications about QueryFrame
    * queryframe.php: bug #1027321, drop-down databases list keeps focus,
      thanks to Michael Keck

2004-09-16 Garvin Hicking <me@supergarv.de>
    * libraries/display_export.lib.php: Bug #1010752 - Remove space
      before <label> to be consistent throughout the panel.

2004-09-15 Garvin Hicking <me@supergarv.de>
    * browse_foreigners.php, libraries/functions.js, tbl_select.php:
      Fixed foreign key browser window to also work from within
      Search-subpanel.

2004-09-14 Marc Delisle  <lem9@users.sourceforge.net>
    * server_privileges.php: stay on the form when passwords don't match
      (after the js alert)
    * left.php, bug #1006514, top left frame does not load in Safari 1.2.3,
      workaround thanks to Ryan Schmidt

2004-09-14 Michal Čihař  <michal@cihar.com>
    * themes.php, libraries/common.lib.php, libraries/defines.lib.php,
      libraries/select_theme.lib.php, themes/darkblue_orange/info.inc.php,
      themes/original/info.inc.php: Better theme version check (bug #1023029).
    * libraries/auth/cookie.auth.lib.php: Remember database when using cookie
      login (bug #1027873).

2004-09-13 Garvin Hicking <me@supergarv.de>
    * browse_foreigners.php: bug #1027204 - paging did not
      work in foreigner browsing window.

2004-09-12 Marc Delisle  <lem9@users.sourceforge.net>
    * sql.php: bug #988723, sql error when ordering by count( * )
